[Success] Fix header styling on mobile

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -2,12 +2,13 @@
   display: flex;
   text-align: center;
   justify-content: space-between;
-  width: 1200px;
-  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  margin: 8px 0 ;
 }
 .header {
+  width: 95%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   min-height: 100px;
   box-shadow: 0 4px 9px -2px rgba(138, 138, 138, 0.192);
@@ -33,6 +34,8 @@
   color: var(--accent);
 }
 .headerLogo {
+  display: flex;
+  align-self: center;
   float: left;
 }
 .headerLogo:hover {
