--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,6 @@ body {
 }
 
 body {
-  margin: 12px 0;
   background: rgb(var(--primary));
 }
 
